# PBL2

./: CMakeLists.txt  Makefile  graphics.h  main.cpp  main1.cppx
.vscode2/: launch.json  tasks.json
Database/AccountDB/: account.txt  accountAdmin.txt  accountPatient.txt  accountUser.txt  temp_accountUser.txt
Database/AppoinmentDB/: 2022.12.txt  2022_12.txt  2024_10.txt  2024_11.txt  2024_12.txt  Appoinment.txt  Summary.txt
Database/DrugDB/: 1.txt  8.txt
Database/Medical_recordDB/: MR01.txt  MR02.txt  MR1.txt  MR10.txt  MR11.txt  MR12.txt  MR13.txt  MR14.txt  MR15.txt  MR16.txt  MR17.txt  MR18.txt  MR19.txt  MR2.txt  MR20.txt  MR21.txt  MR22.txt  MR23.txt  MR24.txt  MR3.txt  MR4.txt  MR5.txt  MR6.txt  MR7.txt  MR8.txt  MR9.txt  medical_record.txt  symptom_solutions.txt
Database/PatientDB/: P1.txt  P10.txt  P11.txt  P12.txt  P13.txt  P14.txt  P15.txt  P16.txt  P17.txt  P18.txt  P19.txt  P2.txt  P20.txt  P21.txt  P22.txt  P23.txt  P24.txt  P25.txt  P26.txt  P3.txt  P4.txt  P5.txt  P6.txt  P7.txt  P8.txt  P9.txt  patient.txt
Database/PrescriptionDB/: P001.txt  P002.txt  P003.txt
Database/medicineDM/: 10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  9.txt
Management/: listAccount.cpp  listAccount.h
Management/Single/: Account.cpp  Account.h  Appoinment.cpp  Appoinment.h  Date.cpp  Date.h  Patient.cpp  Patient.h
Mouse_event/: mouse_menu.cpp
Template/: LinkedList.cpp
include/Header/: Header.h  Header.hpp
include/Interface/: Admin_interface.hpp  Login.hpp  Patient_interface.hpp
include/Management/: Account.h  Account.hpp  AccountAdmin.hpp  AccountUser.hpp  Appoinment.h  Appoinment.hpp  Date.h  Date.hpp  MedicalRecord.h  MedicalRecord.hpp  Patient.h  Patient.hpp  listAccount.h  listAccount.hpp  listAppoinment.hpp  listMedicalRecord.h  listMedicalRecord.hpp  listPatient.h  listPatient.hpp
include/Template/: LinkedList.hpp  Map.hpp
src/: CmakeLists.txtx
src/Interface/: Admin_interface.cpp  Login.cpp  Patient_interface.cpp
src/Management/: Account.cpp  AccountAdmin.cpp  AccountUser.cpp  Appoinment.cpp  Date.cpp  MedicalRecord.cpp  Patient.cpp  listAccount.cpp  listAppoinment.cpp  listMedicalRecord.cpp  listPatient.cpp
src/Template/: LinkedList.cpp  Map.tpp
